@@ -1,3 +1,6 @@
+9-28-19
+- in disassembly, symbolicate branch targets
+
 9-23-19
 - symbolicated disassembly
 - better thread list output
